[package]
name = "ram-journal"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
authors = ["Luiz Picanço <lpicanco@gmail.com>"]
readme = "README.md"
description = "Efficiently in-memory log manager"

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
clokwerk = "0.3.5"
lms_lib = { version = "0.4.0", default-features = false }
log = "0.4.17"
signal-hook = { version = "0.3.14", default-features = false }
simple_logger = { version = "2.3.0", default-features = false, features = ["colors"] }
sys-mount = { version = "1.5.1", default-features = false }
twelf = { version = "0.7.0", features = ["ini", "clap", "env"], default-features = false }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
